templates: cdocs: fix card header overflow

--- a/internal/assets/embed/cdocs.css
+++ b/internal/assets/embed/cdocs.css
@@ -1,3 +1,7 @@
+.card-header {
+  overflow-x: auto;
+}
+
 .card-content th {
   white-space: nowrap;
 }
